4 melhorando o código do layout

--- a/LojaRazor/Views/Shared/_Layout.cshtml
+++ b/LojaRazor/Views/Shared/_Layout.cshtml
@@ -5,30 +5,8 @@
     <link href="~/Content/Style.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            @Html.ActionLink("Loja Razor", "Index", "Home", null, new { @class = "brand" })
-            <ul class="nav">
-                <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                <li>@Html.ActionLink("Contato", "Contato", "Home")</li>
-            </ul>
-            <p class="navbar-text pull-right">
-                @if (Session["usuarioLogado"] != null)
-                {
-                    @:Bem-vindo, @Session["usuarioLogado"]
-                    @Html.ActionLink("Logout", "Logout", "Autenticacao")
 
-                }
-                else
-                {
-                    @:Olá,visitante!
-                    @Html.ActionLink("Login", "Index", "Autenticacao")
-                    @:ou
-                    @Html.ActionLink("Cadastre-se", "Form", "Usuarios")
-                }
-            </p>
-        </div>
-    </div>
+    @Html.Partial("_MenuSuperior")
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span3">
@@ -40,6 +18,9 @@
             </div>
         </div>
     </div>
+    <!--importa scripts 
+        false: não é obrigatório-->
+    @RenderSection("Scripts", false)
 </body>
 
 </html>
