--- a/LojaRazor/Views/Shared/_MenuSuperior.cshtml
+++ b/LojaRazor/Views/Shared/_MenuSuperior.cshtml
@@ -1,23 +1,28 @@
-﻿<div class="navbar navbar-fixed-top">
+﻿@using LojaRazor.Internacionalizacao
+
+<div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         @Html.ActionLink("Loja Razor", "Index", "Home", null, new { @class = "brand" })
         <ul class="nav">
-            <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-            <li>@Html.ActionLink("Contato", "Contato", "Home")</li>
+            <li>@Html.ActionLink(Mensagens.Sobre, "About", "Home")</li>
+            <li>@Html.ActionLink(Mensagens.Contato, "Contato", "Home")</li>
         </ul>
         <p class="navbar-text pull-right">
             @if (Session["usuarioLogado"] != null)
             {
-                @:Bem-vindo, @Session["usuarioLogado"]
-                @Html.ActionLink("Logout", "Logout", "Autenticacao")
+                @LojaRazor.Internacionalizacao.Mensagens.BemVindo
+                @:,
+                @Session["usuarioLogado"]
+                @Html.ActionLink(Mensagens.Logout, "Logout", "Autenticacao")
 
             }
             else
             {
-                @:Olá,visitante!
-                @Html.ActionLink("Login", "Index", "Autenticacao")
-                @:ou
-                @Html.ActionLink("Cadastre-se", "Form", "Usuarios")
+                @LojaRazor.Internacionalizacao.Mensagens.OlaVisitante
+                @:!
+                @Html.ActionLink(Mensagens.Login, "Index", "Autenticacao") 
+                @Mensagens.ou 
+                @Html.ActionLink(Mensagens.Cadastrese, "Form", "Usuarios")
             }
         </p>
     </div>
