--- a/LojaRazor/Views/Autenticacao/Index.cshtml
+++ b/LojaRazor/Views/Autenticacao/Index.cshtml
@@ -25,6 +25,7 @@
 </div>
 
 @section Scripts{
-    <script src="~/Scripts/jquery.validate.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery-1.7.1.js" type="text/javascript"></script>
+    <!--<script src="~/Scripts/jquery.validate.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery-1.7.1.js" type="text/javascript"></script>-->
+    @Scripts.Render("~/bundle/scripts")
 }
