--- a/LojaRazor/Views/Shared/_Layout.cshtml
+++ b/LojaRazor/Views/Shared/_Layout.cshtml
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link href="~/Content/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/Style.css" rel="stylesheet" />
+   <!-- <link href="~/Content/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/Style.css" rel="stylesheet" />-->
+    @Styles.Render("~/bundle/estilos")
 </head>
 <body>
 
